Fixed the text align on the winning screen

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
 	pointer-events: none;
 	border-radius: 5px;
 	backface-visibility: hidden;
-	
+
 }
 
 .card:active {
@@ -107,6 +107,10 @@ body {
 
 .congratulation-screen h1 {
 	margin-top: 10vh;
+	text-align: center;
+}
+
+.congratulation-screen p {
 	text-align: center;
 }
 
